# Zephyr_vehicle_diagnostics

./: CMakeLists.txt  README.md  TODO.md  build.sh  designplan.md  flash.sh  west.yml
.github/workflows/: build.yml  static_analysis.yml.txt
battery_node/: CMakeLists.txt  prj.conf
battery_node/src/: main.c
brake_node/: prj.conf
brake_node/boards/: esp32s3_node.overlay
brake_node/src/: main.c
collision_node/: CMakeLists.txt  prj.conf
collision_node/boards/: esp32s3_node.overlay
collision_node/src/: main.c
common/: Kconfig
common/boards/: esp32s3_node.overlay
common/can_protocol/: can_fd.c  can_fd.h  can_ids.h  isotp.c  isotp.h  j1939.c  j1939.h
common/diagnostic/: diag_service.c  diag_service.h
common/error/: error_handler.c  error_handler.h
common/events/: event_manager.c  event_manager.h
common/power/: power_manager.c  power_manager.h
common/safety/: asil.c  asil.h  asil_monitor.c  asil_monitor.h  control_flow.c  control_flow.h  memory_protection.c  memory_protection.h  redundancy.c  redundancy.h  runtime_stats.c  runtime_stats.h  sensor_validation.h  task_monitor.c  task_monitor.h
common/security/: can_auth.c  can_auth.h  secure_boot.c  secure_storage.c  (+1 more)
docs/: README.md  node_communication.txt
gps_node/: CMakeLists.txt  prj.conf
speed_node/: CMakeLists.txt
temp_node/: CMakeLists.txt  Kconfig
tests/: CMakeLists.txt  diag_service_test.c  sensor_test.c  sensor_validation_test.c  task_monitor_test.c  v2x_test.c
tpms_node/: CMakeLists.txt  prj.conf
tpms_node/boards/: esp32s3_node.overlay
tpms_node/src/: main.c
vcu/: prj.conf
(+35 files in other folders)
